# lecture-ws-development-of-a-db-app

./: .gitignore  LICENSE  README.md
backups/: README.md  local.yml  production.yml
backups/backup-scripts/: Dockerfile  main.py  requirements.txt
backups/sql-scripts/: create_db_tables.sql
base/: local.yml  production.yml
base/vue-frontend/: package-lock.json
database-first/: README.md  local.yml
database-first/backend/: mypy.ini
evaluation/: README.md  evaluation.py  requirements.txt
frontend/rest-simple/: .env.sample  .gitignore  CLAUDE.md  README-TESTS.md  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.json
golang/cursor-simple/: accounts.db  go.mod  main.go
golang/repository-simple/: accounts.db  go.mod  main.go
golang/rest-simple/: .gitignore  Makefile  README.md  go.mod  go.sum
golang/rest-simple-exercise/: .gitignore  Makefile  README.md  go.mod  go.sum
java/: .gitignore  README.md
java/cursor-simple/: .gitignore  accounts.db  build.gradle.kts  settings.gradle.kts
java/logs/: notifications.json  pre_tool_use.json
java/repository-simple/: accounts.db  build.gradle.kts
java/repository-simple-exercise/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  verify-exercise.sh
java/rest-simple/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README-Docker.md  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts  students.db
java/rest-simple-exercise/: .gitignore  Dockerfile  Makefile  README.md  build.gradle.kts
kotlin/cursor-simple/: accounts.db
kotlin/repository-simple/: accounts.db  build.gradle.kts  settings.gradle.kts
kotlin/rest-simple/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/rest-simple-exercise/: .gitignore  Makefile  README.md  build.gradle.kts
python/cursors-simple/: README.md  main.py
raw-sql/: README.md  production.yml
raw_sql/: local.yml  production.yml
rust/repository-simple/: Cargo.toml  accounts.db
rust/repository-simple/src/: main.rs
rust/rest-simple-exercise/db/: Cargo.toml
rust/rest-simple-exercise/db/migrations/: 20230819090247_student.sql
rust/rest-simple-exercise/db/src/: lib.rs
rust/rest-simple-exercise/service/: Cargo.toml
rust/rest-simple-exercise/service/src/: lib.rs
rust/rest-simple/api/: .gitignore  Cargo.toml
rust/rest-simple/api/src/: error.rs  main.rs  student.rs  students.rs
scratch/: README.md
(+445 files in other folders)
