[package]
name = "repository-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4.19"
uuid = { version = "0.8", features = ["v4"] }
anyhow = "1.0"
