[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
db = { path = "../db" }
validator = "0.16.1"

[dev-dependencies]
mockall = "0.11.4"
futures-util = "0.3.28"
